# Metaglass-Agent

./: LICENSE  README.md  test_create_user.sh
.github/workflows/: orchestrator-ci.yaml
orchestrator/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 0001_initial_schema.py  0002_session_context_media_payload.py
orchestrator/db/: connection.py
orchestrator/docs/: CONTRIBUTING.md  GETTING_STARTED.md
orchestrator/proto/: common.proto  context.proto  orchestrator.proto
orchestrator/src/: config.py  main.py
orchestrator/src/db/: models.py  postgres.py  qdrant.py
orchestrator/src/server/: context_server.py  orchestrator_server.py  session_server.py  stream_server.py
orchestrator/src/service/: context_service.py  session_reaper.py  session_service.py  stream_service.py
orchestrator/src/services/: context_service.py  orchestrator_service.py  session_service.py
orchestrator/tests/: conftest.py  test_context_server.py  test_context_service.py  test_orchestrator_server.py  test_orchestrator_service.py  test_session_server.py  test_session_service.py  test_stream_server.py
proto/: common.proto  context.proto  orchestrator.proto  session.proto  stream.proto
