[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "grpcio>=1.70",
    "grpcio-tools>=1.70",
    "grpcio-reflection>=1.70",
    "protobuf>=5.29",
    "qdrant-client>=1.17.1",
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src", "alembic", "tests"]
extraPaths = ["src"]
exclude = ["generated"]

[tool.ruff]
target-version = "py313"
src = ["src"]
exclude = ["generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "ruff>=0.15.9",
]
